Add fallbacks for export libraries

--- a/Maineditor (4) (1).html
+++ b/Maineditor (4) (1).html
@@ -166,8 +166,8 @@
 <!-- Hidden JSON input -->
 <input type="file" id="json-file-input" accept="application/json" style="display:none" />
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js" integrity="sha512-rcVYLRNvKcJsteVEh9UpAJZciV06P88eaJEqn3Ejj6inUeJ8V+RaH//RUW2KIiMzFxLpy0X58F3RrgPf63Bpkw==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js" integrity="sha512-qZkkCm1cWg5kyRjO6jwxKF1u9IiMaivGi99ZTSdKCbFf8gDuwZQzQ0imeISFRCGDpa2BkLomPvKgJo0vvArkEA==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
   <script src="https://unpkg.com/docx@8.2.3/build/index.js"></script>
   <script src="app.js"></script>
 
