Add embed blocks and standalone HTML export

--- a/Maineditor (4) (1).html
+++ b/Maineditor (4) (1).html
@@ -39,6 +39,7 @@
       <button class="toolbar-btn" data-add="table-bai" aria-label="Insert before after impact table">Before/After/Impact</button>
       <button class="toolbar-btn" data-add="table-custom" aria-label="Insert custom table">Custom table</button>
       <button class="toolbar-btn" data-add="image" aria-label="Insert image">Image</button>
+      <button class="toolbar-btn" data-add="embed" aria-label="Insert embedded content">Embed</button>
     </div>
 
     <div class="toolbar-group">
@@ -63,7 +64,7 @@
       <button class="toolbar-btn" id="quality-check-btn" aria-label="Check brief for placeholders" title="Check brief for placeholders">Check brief</button>
       <button class="toolbar-btn" id="export-json" aria-label="Export JSON">Export JSON</button>
       <button class="toolbar-btn" id="export-docx" aria-label="Export DOCX document">Export DOCX</button>
-      <button class="toolbar-btn" id="export-pdf" aria-label="Export editable PDF">Export editable PDF</button>
+      <button class="toolbar-btn" id="export-html" aria-label="Export standalone HTML">Export HTML</button>
       <button class="toolbar-btn" id="import-json" aria-label="Import JSON">Import JSON</button>
       <button class="toolbar-btn" id="print-btn" aria-label="Print or save as PDF">Print / PDF</button>
     </div>
