--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <button class="toolbar-btn" id="export-json" aria-label="Export JSON">Export JSON</button>
       <button class="toolbar-btn" id="export-docx" aria-label="Export DOCX document">Export DOCX</button>
       <button class="toolbar-btn" id="export-html" aria-label="Export standalone HTML">Export HTML</button>
+      <button class="toolbar-btn" id="share-btn" aria-label="Share or embed this editor">Share link</button>
       <button class="toolbar-btn" id="import-json" aria-label="Import JSON">Import JSON</button>
       <button class="toolbar-btn" id="print-btn" aria-label="Print or save as PDF">Print / PDF</button>
     </div>
