Add three new professional themes

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       <select id="theme-select" aria-label="Select theme">
         <option value="iga">IGA</option>
         <option value="ft">FT-style</option>
+        <option value="slate">Slate</option>
+        <option value="emerald">Emerald</option>
+        <option value="noir">Noir</option>
       </select>
       <button class="toolbar-btn" id="toggle-overlay" aria-label="Toggle layout grid">Grid</button>
     </div>
