--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <button class="toolbar-btn" id="export-html" aria-label="Export standalone HTML">Export HTML</button>
       <button class="toolbar-btn" id="share-btn" aria-label="Share or embed this editor">Share link</button>
       <button class="toolbar-btn" id="import-json" aria-label="Import JSON">Import JSON</button>
-      <button class="toolbar-btn" id="print-btn" aria-label="Print or save as PDF">Print / PDF</button>
+      <button class="toolbar-btn" id="export-pdf" aria-label="Export PDF">Export PDF</button>
     </div>
 
     <div class="toolbar-group">
